--- a/templates/accounts/sign-up.html
+++ b/templates/accounts/sign-up.html
@@ -138,11 +138,16 @@ https://www.tooplate.com/view/2127-little-fashion
                         </button>
 
                         <p class="text-center">
-                          Already have an account? Please<br />
+                          Already have an account? Please sign-in<br />
                           <a
                             class="text-decoration-underline"
                             href="{% url 'login' %}"
-                            >Sign In</a
+                            >User</a
+                          >
+                          <a
+                            class="text-decoration-underline"
+                            href="{% url 'farmer-login' %}"
+                            >Farmer</a
                           >
                         </p>
 
