--- a/templates/products/products-details.html
+++ b/templates/products/products-details.html
@@ -72,8 +72,8 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-6 col-12">
               <div class="product-thumb">
                 <img
-                  src="{{crop.crop_img.url}}"
-                  class="img-fluid product-image"
+                  src="{% if crop.crop_img %}{{crop.crop_img.url}}{% else %}{% static 'images/img1.jpg' %}{% endif %}"
+                  class="img-fluid product-image" style="width: 500px; height: 500px;"
                   alt=""
                 />
               </div>
@@ -83,6 +83,9 @@ https://www.tooplate.com/view/2127-little-fashion
               <div class="product-info d-flex">
                 <div>
                   <h2 class="product-title mb-0">{{crop.crop_name}}</h2>
+                  <h3>
+                    <a href="{{crop.category.get_absolute_url }}">{{crop.category}}</a>
+                  </h3>
 
                 </div>
 
@@ -97,6 +100,7 @@ https://www.tooplate.com/view/2127-little-fashion
                 <p class="lead mb-5">
                   {{crop.crop_desc}}
                 </p>
+                {{crop.crop_desc|linebreaks}}
               </div>
 
               <div class="product-cart-thumb row">
@@ -145,104 +149,34 @@ https://www.tooplate.com/view/2127-little-fashion
               <h3 class="mb-5">You might also like</h3>
             </div>
 
-            <div class="col-lg-4 col-12 mb-3">
-              <div class="product-thumb">
-                <a href="product-detail.html">
-                  <img
-                    src="images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
-                </a>
-
-                <div class="product-top d-flex">
-                  <span class="product-alert me-auto">New arrival</span>
-
-                  <a href="#" class="bi-heart-fill product-icon"></a>
-                </div>
-
-                <div class="product-info d-flex">
-                  <div>
-                    <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link"
-                        >Tree pot</a
-                      >
-                    </h5>
-
-                    <p class="product-p">Original package design from house</p>
-                  </div>
-
-                  <small class="product-price text-muted ms-auto mt-auto mb-5"
-                    >$25</small
-                  >
-                </div>
-              </div>
+            {% for c in crops %}
+<div class="col-lg-4 col-12 mb-3">
+    <div class="product-thumb">
+        <a href="{{c.get_absolute_url}}">
+            <img src="{% if c.crop_img %}{{c.crop_img.url}}{% else %}{% static 'images/img1.jpg' %}{% endif %}" class="img-fluid product-image" style="width: 350px; height: 300px;" alt="">
+        </a>
+        
+        <div class="product-top d-flex">
+            <span class="product-alert me-auto">New Arrival</span>
+            
+            <a href="#" class="bi-heart-fill product-icon"></a>
+        </div>
+        
+        <div class="product-info d-flex">
+            <div>
+                <h5 class="product-title mb-0">
+                    <a href="{{ c.get_absolute_url}}" class="product-title-link">{{c.crop_name}}</a>
+                </h5>
+                
+                <p class="product-p">{{c.crop_desc}}</p>
             </div>
+            
+            <small class="product-price text-muted ms-auto mt-auto mb-5">${{c.crop_price}}</small>
+        </div>
+    </div>
+</div>
+{% endfor %}
 
-            <div class="col-lg-4 col-12 mb-3">
-              <div class="product-thumb">
-                <a href="product-detail.html">
-                  <img
-                    src="images/product/jordan-nix-CkCUvwMXAac-unsplash.jpeg"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
-                </a>
-
-                <div class="product-top d-flex">
-                  <span class="product-alert">Low Price</span>
-
-                  <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
-                </div>
-
-                <div class="product-info d-flex">
-                  <div>
-                    <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link"
-                        >Fashion set</a
-                      >
-                    </h5>
-
-                    <p class="product-p">Costume package</p>
-                  </div>
-
-                  <small class="product-price text-muted ms-auto mt-auto mb-5"
-                    >$35</small
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-12">
-              <div class="product-thumb">
-                <a href="product-detail.html">
-                  <img
-                    src="images/product/nature-zen-3Dn1BZZv3m8-unsplash.jpeg"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
-                </a>
-
-                <div class="product-top d-flex">
-                  <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
-                </div>
-
-                <div class="product-info d-flex">
-                  <div>
-                    <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link"
-                        >Juice Drinks</a
-                      >
-                    </h5>
-
-                    <p class="product-p">Nature made another world</p>
-                  </div>
-
-                  <small class="product-price text-muted ms-auto mt-auto mb-5"
-                    >$45</small
-                  >
-                </div>
-              </div>
             </div>
           </div>
         </div>
