--- a/templates/farmers_page/edit-crops.html
+++ b/templates/farmers_page/edit-crops.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -10,21 +11,24 @@
     <title>Edit Crop</title>
 
     <!-- CSS FILES -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="{% static 'https://fonts.googleapis.com' %}" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="{% static 'https://fonts.gstatic.com' %}" crossorigin />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap"
+      href="{% static 'https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap' %}"
       rel="stylesheet"
     />
 
-    <link href="../css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../css/bootstrap-icons.css" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet" />
 
-    <link rel="../stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="{% static 'css/slick.css' %}" />
 
-    <link href="../css/tooplate-little-fashion.css" rel="stylesheet" />
+    <link href="{% static 'css/tooplate-little-fashion.css' %}" rel="stylesheet" />
+    <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
 
     <!--
 
@@ -43,11 +47,24 @@ https://www.tooplate.com/view/2127-little-fashion
     </section>
 
     <main>
+      <header
+      class="site-header mt-0 section-padding d-flex justify-content-center align-items-center"
+      >
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 col-12">
+              <h1>
+                <h1 class="hero-title text-center mb-5">Edit Crop</h1>
+              </h1>
+            </div>
+          </div>
+        </div>
+      </header>
+
       <section class="sign-in-form section-padding">
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto col-12">
-              <h1 class="hero-title text-center mb-5">Edit Crop</h1>
 
               <div class="row">
                 <div class="col-lg-8 col-11 mx-auto">
@@ -58,7 +75,7 @@ https://www.tooplate.com/view/2127-little-fashion
                           name="cname"
                           id="cname"
                           class="form-control"
-                          placeholder="Crop Name"
+                          value="{{crop.crop_name}}"
                           required
                         />
   
@@ -67,45 +84,58 @@ https://www.tooplate.com/view/2127-little-fashion
                       <br />
                     <div class="form-floating">
                       <input
-                        type="text"
-                        name="title"
-                        id="title"
+                        type="tel"
+                        name="cprice"
+                        id="cprice"
                         class="form-control"
-                        placeholder="Crop Title"
+                        value="{{crop.crop_price}}"
                         required
                       />
 
-                      <label for="fname">Crop Title</label>
+                      <label for="cprice">Crop Price</label>
                     </div>
                     <br />
+                    
                     <div class="form-floating">
-                      <input
-                        type="text"
-                        name="desc"
-                        id="desc"
-                        class="form-control"
-                        placeholder="Description"
-                        required
-                      />
+                      <textarea 
+                      name="desc"
+                      id="desc"
+                      class="form-control"
+                      rows="30"
+                      required>{{crop.crop_desc}}</textarea>
 
                       <label for="desc">Description</label>
                     </div>
                     <br />
                    
                     
-                    <div class="form-floating">
+                    <label class="form-label" for="file"
+                          ><b>Crop Image:</b></label
+                        >
+                    <div class="">
                       <input
                         type="file"
-                        name="file"
+                        name="cimg"
                         id="file"
                         class="form-control"
-                        placeholder="Crop Image"
+                        value="{{crop.crop_img}}"
                         required
                       />
-
-                      <label for="file">Crop Image</label>
-                    </div>
                     <br />
+                    <label class="form-label" for="role"
+                          ><b>Category:</b></label
+                        >
+                        <select
+                          name="cat"
+                          id="cat"
+                          class="form-control"
+                          required
+                        >
+                      <option value="food"></option>
+                      <option value="fiber">Fiber Crops</option>
+                    </select><br>
+                    <label for="available">Available</label>
+                    <input type="checkbox" name="available" id="available" checked>
 
                    
 
@@ -185,11 +215,11 @@ https://www.tooplate.com/view/2127-little-fashion
     </footer>
 
     <!-- JAVASCRIPT FILES -->
-    <script src="../js/jquery.min.js"></script>
-    <script src="../js/bootstrap.bundle.min.js"></script>
-    <script src="../js/Headroom.js"></script>
-    <script src="../js/jQuery.headroom.js"></script>
-    <script src="../js/slick.min.js"></script>
-    <script src="../js/custom.js"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'js/Headroom.js' %}"></script>
+<script src="{% static 'js/jQuery.headroom.js' %}"></script>
+<script src="{% static 'js/slick.min.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
   </body>
 </html>
