--- a/templates/farmers_page/farmer-dashboard.html
+++ b/templates/farmers_page/farmer-dashboard.html
@@ -137,7 +137,7 @@ https://www.tooplate.com/view/2127-little-fashion
             ><br /><i class="bi bi-archive"></i>
           </a>
           <a
-            href="{% url 'add-crop' %}"
+            href="{% url 'product:add-crop' %}"
             class="btn btn-dark col-lg-4 col-4 mb-3 my-custom-btn text-light justify-content-center pt-3 px-5 mx-3 text-center position-relative"
           >
             Add Crops
@@ -181,7 +181,7 @@ https://www.tooplate.com/view/2127-little-fashion
               <div class="product-thumb">
                 <a href="#">
                   <img style="width: 300px; height: 200px;"
-                    src="{% static 'images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg' %}"
+                    src="{% if c.crop_img %}{{c.crop_img.url}}{% else %}{% static 'images/img1.jpg' %}{% endif %}"
                     class="img-fluid rounded mx-auto product-image"
                     alt="{{c.name}}"
                   />
@@ -197,7 +197,7 @@ https://www.tooplate.com/view/2127-little-fashion
                   <div>
                     <h5 class="product-title mb-0">
                       <a
-                        href="{% url 'product-details' c.id %}"
+                        href="{{c.get_absolute_url}}"
                         class="product-title-link"
                         >{{c.crop_name}}</a
                       >
