--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -71,7 +71,7 @@
             
             <div class="col-lg-4 col-12 mb-3">
                 <div class="product-thumb">
-                    <a href="#">
+                    <a href="{{c.get_absolute_url}}">
                         <img src="{% if c.crop_img %}{{c.crop_img.url}}{% else %}{% static 'images/img1.jpg' %}{% endif %}"
                         class="img-fluid product-image"
                         style="width: 400px; height: 350px"
