--- a/templates/accounts/sign-up.html
+++ b/templates/accounts/sign-up.html
@@ -58,7 +58,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                   <div class="row">
                     <div class="col-lg-8 col-11 mx-auto">
-                      <form role="form" method="post">
+                      <form role="form" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
 
                         <div class="form-floating mb-4">
