--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -59,12 +59,12 @@
                 </div>
 
             </section>
-{% if request.user.is_authenticated %}
-<section class="featured-product section-padding">
+            <section class="featured-product section-padding">
+    {% if request.user.is_authenticated %}
     <div class="container">
         <div class="row">
             
-            <div class="col-12text-center">
+            <div class="col-12 text-center text-decoration-underline">
                 <h2 class="mb-5">Featured Products</h2>
             </div>
             {% for c in crop %}
@@ -267,7 +267,7 @@
                 <div class="container">
                     <div class="row">
                         
-                        <div class="col-12text-center">
+                        <div class="col-12 text-center text-decoration-underline">
                             <h2 class="mb-5">Featured Products</h2>
                         </div>
                         {% for c in crop %}
