--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@ https://www.tooplate.com/view/2127-little-fashion
         <a href="{% url 'account' %}" class="col-lg-4 me-2">
           <i class="fa-regular fa-user"></i>
         </a>
-        <a href="#" class="col-lg-4 position-relative">
+        <a href="{% url 'cart_view' %}" class="col-lg-4 position-relative">
           <i class="fa-solid fa-cart-shopping">
   
           <span class="position-absolute top-0 start-100 translate-middle ms-2 mb-3 badge rounded-circle text-light bg-danger">
@@ -87,7 +87,7 @@ https://www.tooplate.com/view/2127-little-fashion
         <a href="{% url 'account' %}" class="col-lg-4">
           <i class="fa-regular fa-user"></i>
         </a>
-        <a href="#" class="col-lg-4 position-relative">
+        <a href="{% url 'cart_view'%}" class="col-lg-4 position-relative">
           <i class="fa-solid fa-cart-shopping">
 
             <span class="position-absolute top-0 start-100 translate-middle ms-2 mb-3 badge rounded-circle text-light bg-danger">
