--- a/templates/products/products-details.html
+++ b/templates/products/products-details.html
@@ -145,14 +145,14 @@ https://www.tooplate.com/view/2127-little-fashion
                 </div>
 
                 <div class="col-lg-6 col-12 mt-4 mt-lg-0">
-                  <button
+                  <a href="{% url 'add_to_cart' crop.id %}"
                     type="submit"
                     class="btn custom-btn cart-btn"
                     data-bs-toggle="modal"
                     data-bs-target="#cart-modal"
                   >
                     Add to Cart
-                  </button>
+                  </a>
                 </div>
                 <p>
                   <a href="#" class="product-additional-link">Details</a>
