--- a/templates/products/about.html
+++ b/templates/products/about.html
@@ -46,9 +46,19 @@ https://www.tooplate.com/view/2127-little-fashion
     <section>
       <div>
         <div class="row">
-          <div class="w-100 h-75 p-5 bg-dark col-12 text-center ">
-            <h2 class="mb-5 text-light">About Us</h2>
+          <header
+        class="site-header mt-0 section-padding d-flex justify-content-center align-items-center"
+        >
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-10 col-12">
+                <h1>
+                  <h1 class="hero-title text-center mb-5">About Us</h1>
+                </h1>
+              </div>
+            </div>
           </div>
+        </header>
 
           <div class="container col-lg-8 col-12 shadow-sm mx-auto p-5 m-5">
             KBT-Marketplace was established to bridge the gap between farmers,
