--- a/templates/accounts/sign-in.html
+++ b/templates/accounts/sign-in.html
@@ -49,9 +49,12 @@ https://www.tooplate.com/view/2127-little-fashion
             <section class="sign-in-form section-padding">
                 <div class="container">
                     <div class="row">
-
+                        
                         <div class="col-lg-8 mx-auto col-12">
-
+                            <div class="container mx-auto gap-2  btn-group" role="group">
+                                <a href="#" class="btn btn-dark">User</a>
+                                <a href="{% url 'farmer-login' %}" class="btn btn-outline-dark">Farmer</a>
+                            </div>
                             <h1 class="hero-title text-center mb-5">Sign In</h1>
                             {% include 'components/message.html' %}
 
@@ -75,8 +78,8 @@ https://www.tooplate.com/view/2127-little-fashion
                                         <button type="submit" class="btn custom-btn form-control mt-4 mb-3">
                                             Sign in
                                         </button>
-
-                                        <p class="text-center">Don’t have an account? <br /><a class="text-decoration-underline" href="{% url 'signup' %}">Create One</a> or  <a href="{% url 'password_reset' %}">Reset password</a></p>
+                                        <a href="{% url 'password_reset' %}">Reset password</a>
+                                        <p class="text-center">Don’t have an account? <a class="text-decoration-underline" href="{% url 'signup' %}">Create One</a></p>
 
                                         <div class="div-separator w-50 m-auto my-5"><span>or</span></div>
 
