--- a/templates/farmers_page/farmer-login.html
+++ b/templates/farmers_page/farmer-login.html
@@ -75,8 +75,9 @@ https://www.tooplate.com/view/2127-little-fashion
                                         <button type="submit" class="btn custom-btn form-control mt-4 mb-3">
                                             Sign in
                                         </button>
+                                        <a href="{% url 'password_reset' %}">Reset password</a>
 
-                                        <p class="text-center">Don’t have an account? <br /><a class="text-decoration-underline" href="{% url 'signup' %}">Create One</a> or  <a href="{% url 'password_reset' %}">Reset password</a></p>
+                                        <p class="text-center">Don’t have an account? <br /><a class="text-decoration-underline" href="{% url 'signup' %}">Create One</a></p>
 
                                         <div class="div-separator w-50 m-auto my-5"><span>or</span></div>
 
