--- a/templates/accounts/edit-address.html
+++ b/templates/accounts/edit-address.html
@@ -50,7 +50,7 @@
         <h3 class=""><span style="color: #FF4400;">Edit</span> Address</h3>
       </div>
     </nav>
-
+    {% include 'components/message.html' %}
     <div class="container col-lg-6 mx-auto bg-body shadow">
       
       <form class="form-group m-3 pt-5" method="post" enctype="multipart/form-data">
