--- a/templates/Orders/create.html
+++ b/templates/Orders/create.html
@@ -65,42 +65,40 @@ https://www.tooplate.com/view/2127-little-fashion
       </header>
       {% include 'components/message.html' %}
       <div class="container">
-        <p class="text-center mt-3">
-          {{cart|default:"Cart is empty"}}
-        </p>
-          <div class="col-lg-6 col-12 my-5 d-block shadow mx-auto p-5">
-            <ol>
-            {% for item in cart.cart_items.all  %}
-                <li>{{ item.crop.crop_name}} X {{ item.quantity }}</li>
+        <p class="text-center mt-3">{{cart|default:"Cart is empty"}}</p>
+        <div class="col-lg-6 col-12 my-5 d-block shadow mx-auto p-5">
+          <ol>
+            {% for item in cart.cart_items.all %}
+            <li>{{ item.crop.crop_name}} X {{ item.quantity }}</li>
             {% endfor %}
-            </ol>
-            <p>Total: ${{ cart.get_total_price }}</p>
-            <form method='post'>
-              {% csrf_token %}
-              <div class="form-floating">
-                <input
-                  type="text"
-                  name="fname"
-                  id="fname"
-                  class="form-control"
-                  value="{{crop.crop_name}}"
-                  required
-                />
+          </ol>
+          <p>Total: ${{ total_price }}</p>
+          <form method="post">
+            {% csrf_token %}
+            <div class="form-floating">
+              <input
+                type="text"
+                name="fname"
+                id="fname"
+                class="form-control"
+                value="{{user.full_name}}"
+                required
+              />
 
-                <label for="contact">Full Name</label>
-              </div>
-              <br />
+              <label for="fname">Full Name</label>
+            </div>
+            <br />
             <div class="form-floating">
               <input
                 type="email"
                 name="email"
                 id="email"
                 class="form-control"
-                value="{{crop.crop_price}}"
+                value="{{user.email}}"
                 required
               />
 
-              <label for="cprice">Email</label>
+              <label for="email">Email</label>
             </div>
             <br />
             <div class="form-floating">
@@ -109,7 +107,7 @@ https://www.tooplate.com/view/2127-little-fashion
                 name="contact"
                 id="contact"
                 class="form-control"
-                value="{{crop.crop_price}}"
+                value="{{profile.contact}}"
                 required
               />
 
@@ -122,7 +120,7 @@ https://www.tooplate.com/view/2127-little-fashion
                 name="city"
                 id="contact"
                 class="form-control"
-                value="{{crop.crop_price}}"
+                value="{{address.city}}"
                 required
               />
 
@@ -135,100 +133,91 @@ https://www.tooplate.com/view/2127-little-fashion
                 name="Location"
                 id="location"
                 class="form-control"
-                value="{{crop.crop_price}}"
+                value="{{address.location}}"
                 required
               />
 
               <label for="cprice">Location</label>
             </div>
-            <a href="" class="float-end">Update Your Address</a>
+            <a href="{% url 'edit-address' %}" class="float-end">Update Your Address</a>
             <br />
             <br />
-            
-            
 
-              <div class="d-grid">
-                <button
-                type="submit"
-                class="btn custom-btn cart-btn"
-                >
+            <div class="d-grid">
+              <button type="submit" class="btn custom-btn cart-btn">
                 Checkout
               </button>
             </div>
-            </form>
-          </div>
+          </form>
+        </div>
       </div>
 
-    
-        <footer class="site-footer">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-3 col-10 me-auto mb-4">
-                  <h4 class="text-white mb-3">
-                    <a href="index.html">Little</a> Fashion
-                  </h4>
-                  <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">
-                    Copyright © 2022 <strong>Little Fashion</strong>
-                  </p>
-                  <br />
-                  <p class="copyright-text">
-                    Designed by
-                    <a href="https://www.tooplate.com/" target="_blank">Tooplate</a>
-                  </p>
-                </div>
-    
-                <div class="col-lg-5 col-8">
-                  <h5 class="text-white mb-3">Sitemap</h5>
-    
-                  <ul class="footer-menu d-flex flex-wrap">
-                    <li class="footer-menu-item">
-                      <a href="about.html" class="footer-menu-link">Story</a>
-                    </li>
-    
-                    <li class="footer-menu-item">
-                      <a href="#" class="footer-menu-link">Products</a>
-                    </li>
-    
-                    <li class="footer-menu-item">
-                      <a href="#" class="footer-menu-link">Privacy policy</a>
-                    </li>
-    
-                    <li class="footer-menu-item">
-                      <a href="#" class="footer-menu-link">FAQs</a>
-                    </li>
-    
-                    <li class="footer-menu-item">
-                      <a href="#" class="footer-menu-link">Contact</a>
-                    </li>
-                  </ul>
-                </div>
-    
-                <div class="col-lg-3 col-4">
-                  <h5 class="text-white mb-3">Social</h5>
-    
-                  <ul class="social-icon">
-                    <li><a href="#" class="social-icon-link bi-youtube"></a></li>
-    
-                    <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
-    
-                    <li><a href="#" class="social-icon-link bi-instagram"></a></li>
-    
-                    <li><a href="#" class="social-icon-link bi-skype"></a></li>
-                  </ul>
-                </div>
-              </div>
+      <footer class="site-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-3 col-10 me-auto mb-4">
+              <h4 class="text-white mb-3">
+                <a href="index.html">KBT</a> Marketplace
+              </h4>
+              <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">
+                Copyright © 2025 <strong>KBT-Marketplace</strong>
+              </p>
+              <br />
+              <p class="copyright-text">
+                Designed by <a href="#" target="_blank">Aliyu Muhammad Musa</a>
+              </p>
             </div>
-          </footer>
-    
-          <!-- JAVASCRIPT FILES -->
-          <script src="{% static 'js/jquery.min.js' %}"></script>
-          <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-          <script src="{% static 'js/Headroom.js' %}"></script>
-          <script src="{% static 'js/jQuery.headroom.js' %}"></script>
-          <script src="{% static 'js/slick.min.js' %}"></script>
-          <script src="{% static 'js/custom.js' %}"></script>
-          <script src="{% static 'js/custom.js' %}"></script>
-        </main>
-      </body>
-    </html>
-    
+
+            <div class="col-lg-5 col-8">
+              <h5 class="text-white mb-3">Sitemap</h5>
+
+              <ul class="footer-menu d-flex flex-wrap">
+                <li class="footer-menu-item">
+                  <a href="about.html" class="footer-menu-link">Story</a>
+                </li>
+
+                <li class="footer-menu-item">
+                  <a href="#" class="footer-menu-link">Products</a>
+                </li>
+
+                <li class="footer-menu-item">
+                  <a href="#" class="footer-menu-link">Privacy policy</a>
+                </li>
+
+                <li class="footer-menu-item">
+                  <a href="#" class="footer-menu-link">FAQs</a>
+                </li>
+
+                <li class="footer-menu-item">
+                  <a href="#" class="footer-menu-link">Contact</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-lg-3 col-4">
+              <h5 class="text-white mb-3">Social</h5>
+
+              <ul class="social-icon">
+                <li><a href="#" class="social-icon-link bi-youtube"></a></li>
+
+                <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
+
+                <li><a href="#" class="social-icon-link bi-instagram"></a></li>
+
+                <li><a href="#" class="social-icon-link bi-skype"></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+      <!-- JAVASCRIPT FILES -->
+      <script src="{% static 'js/jquery.min.js' %}"></script>
+      <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+      <script src="{% static 'js/Headroom.js' %}"></script>
+      <script src="{% static 'js/jQuery.headroom.js' %}"></script>
+      <script src="{% static 'js/slick.min.js' %}"></script>
+      <script src="{% static 'js/custom.js' %}"></script>
+    </main>
+  </body>
+</html>
